--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "css-loader": "^4.3.0",
+    "gh-pages": "^3.1.0",
     "gh-pages-deploy": "^0.5.1",
     "html-webpack-plugin": "^4.4.1",
     "style-loader": "^1.2.1",
