--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://se1juro.github.io/portafolio",
+  "homepage": "https://se1juro.github.io/",
   "name": "part1",
   "version": "1.0.0",
   "description": "",
