--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "devDependencies": {
     "copy-webpack-plugin": "^6.1.0",
     "file-loader": "^6.1.0",
-    "html-loader": "^1.3.0"
+    "html-loader": "^1.3.0",
+    "mini-css-extract-plugin": "^0.11.2"
   },
   "repository": {
     "type": "git",
