Añadido servidor de desarrollo para equipos remotos en la misma red

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "src/scripts/main.js",
   "scripts": {
+    "build": "npx webpack -d",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
